# authzen-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: client.rs  custom_pdp.rs  tower_pdp.rs  tower_pep.rs
scripts/: check-examples.sh
src/: error.rs  lib.rs  prelude.rs
src/client/: client.rs  mod.rs  pagination.rs
src/model/: entity.rs  evaluation.rs  metadata.rs  mod.rs  search.rs
src/server/: mod.rs
src/tower/: body.rs  mod.rs  pdp.rs  pep.rs
tests/: client.rs  protocol.rs  server.rs  tower_pdp.rs  tower_pep.rs
