[package]
name = "authzen-rs"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
autoexamples = false
authors = ["cooronx 2197083441@qq.com"]
description = "A Rust SDK for the OpenID AuthZEN Authorization API 1.0"
license = "MIT"
repository = "https://github.com/cooronx/authzen-rs.git"
readme = "README.md"
keywords = ["authzen", "authorization", "pdp", "pep", "tower"]
categories = ["authentication", "web-programming"]

[features]
default = ["client", "rustls-tls"]
client = ["dep:async-trait", "dep:futures-util", "dep:reqwest", "dep:tokio"]
server = ["dep:async-trait"]
tower = [
    "dep:bytes",
    "dep:http",
    "dep:http-body",
    "dep:http-body-util",
    "dep:tower",
]
rustls-tls = ["client", "reqwest/rustls-tls"]
native-tls = ["client", "reqwest/native-tls"]
tracing = ["dep:tracing"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
bytes = { version = "1.10", optional = true }
futures-util = { version = "0.3.31", optional = true }
http = { version = "1.3", optional = true }
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1.3", optional = true }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "stream"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.48", features = ["time"], optional = true }
tower = { version = "0.5.3", optional = true }
tracing = { version = "0.1.41", optional = true }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
rcgen = "0.13.2"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "client"
required-features = ["client"]

[[example]]
name = "custom_pdp"
required-features = ["server"]

[[example]]
name = "tower_pep"
required-features = ["client", "tower"]

[[example]]
name = "tower_pdp"
required-features = ["server", "tower"]
